# power-outage-notifier-rs

./: Cargo.toml
src/: main.rs
