[package]
name = "power-outage-notifier-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.14.0"
tokio = { version = "1.2", features = ["full"]}

futures = "0.3"
async-trait = "0.1.60"
google-calendar = "0.4.1"
chrono = "0.4.23"
telegram-bot =  { git = "https://github.com/telegram-rs/telegram-bot.git", rev = "65ad5cf" }
tokio-stream = "0.1.11"
sqlite = "0.30.3"
tokio-cron-scheduler = "0.8.3"
